zone-storage-authz/deploy/envoy-zone-storage.yaml
static_resources:
  listeners:
    - name: zone_storage_ingress
      address:
        socket_address: { address: 0.0.0.0, port_value: 8080 }
      filter_chains:
        - transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
              require_client_certificate: true
              common_tls_context:
                tls_certificates:
                  - certificate_chain: { filename: /etc/aurora/tls/tls.crt }
                    private_key: { filename: /etc/aurora/tls/tls.key }
                validation_context:
                  trusted_ca: { filename: /etc/aurora/tls/central-client-ca.crt }
          filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: zone_storage
                request_timeout: 15s
                stream_idle_timeout: 30s
                route_config:
                  name: storage_routes
                  virtual_hosts:
                    - name: storage
                      domains: ["*"]
                      routes:
                        - match: { safe_regex: { regex: "^/storage/v1/buckets/([^/]+)/objects$" } }
                          route:
                            cluster: minio
                            regex_rewrite:
                              pattern: { regex: "^/storage/v1/buckets/([^/]+)/objects$" }
                              substitution: "/\\1"
                            timeout: 15s
                        - match: { safe_regex: { regex: "^/storage/v1/buckets/([^/]+)/objects/(.+)/tags$" } }
                          route:
                            cluster: minio
                            regex_rewrite:
                              pattern: { regex: "^/storage/v1/buckets/([^/]+)/objects/(.+)/tags$" }
                              substitution: "/\\1/\\2?tagging"
                            timeout: 15s
                        - match: { safe_regex: { regex: "^/storage/v1/buckets/([^/]+)/objects/(.+)$" } }
                          route:
                            cluster: minio
                            regex_rewrite:
                              pattern: { regex: "^/storage/v1/buckets/([^/]+)/objects/(.+)$" }
                              substitution: "/\\1/\\2"
                            timeout: 15s
                        - match: { safe_regex: { regex: "^/storage/v1/buckets/([^/]+)/bulk-delete$" } }
                          route:
                            cluster: minio
                            regex_rewrite:
                              pattern: { regex: "^/storage/v1/buckets/([^/]+)/bulk-delete$" }
                              substitution: "/\\1?delete"
                            timeout: 15s
                http_filters:
                  - name: envoy.filters.http.ext_authz
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
                      failure_mode_allow: false
                      transport_api_version: V3
                      grpc_service:
                        envoy_grpc: { cluster_name: zone_storage_authz }
                        timeout: 500ms
                      with_request_body:
                        max_request_bytes: 16384
                        allow_partial_message: false
                        pack_as_bytes: true
                  - name: envoy.filters.http.aws_request_signing
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.aws_request_signing.v3.AwsRequestSigning
                      service_name: s3
                      region: us-east-1
                      host_rewrite: minio:9000
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                access_log:
                  - name: envoy.access_loggers.stdout
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
                      log_format:
                        json_format:
                          log_type: zone-storage-access
                          timestamp: "%START_TIME%"
                          resource_id: "%REQ(X-AURORA-RESOURCE-ID)%"
                          actor_id: "%REQ(X-AURORA-ACTOR-ID)%"
                          action: "%REQ(X-AURORA-STORAGE-ACTION)%"
                          status: "%RESPONSE_CODE%"
                          bytes_received: "%BYTES_RECEIVED%"
                          bytes_sent: "%BYTES_SENT%"
                          duration_ms: "%DURATION%"
  clusters:
    - name: zone_storage_authz
      connect_timeout: 250ms
      type: STRICT_DNS
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config: { http2_protocol_options: {} }
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
          sni: zone-storage-authz
          common_tls_context:
            tls_certificates:
              - certificate_chain: { filename: /etc/aurora/tls/authz-client.crt }
                private_key: { filename: /etc/aurora/tls/authz-client.key }
            validation_context:
              trusted_ca: { filename: /etc/aurora/tls/authz-server-ca.crt }
      load_assignment:
        cluster_name: zone_storage_authz
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address: { address: zone-storage-authz, port_value: 50052 }
    - name: minio
      connect_timeout: 1s
      type: STRICT_DNS
      load_assignment:
        cluster_name: minio
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address: { address: minio, port_value: 9000 }

admin:
  access_log_path: /dev/null
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }
